azure blob implementation

--- a/Cinerva.Web/appsettings.json
+++ b/Cinerva.Web/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Logs": {
+    "Path":  "Logs\\log.txt" ,
+    "Format" :  "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level}] {Message}{NewLine}{Exception}"
+  }
 }
