--- a/CInerva.Services/Cinerva.Services.csproj
+++ b/CInerva.Services/Cinerva.Services.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="Microsoft.Azure.Management.Monitor.Fluent" Version="1.38.0" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
   </ItemGroup>
 
   <ItemGroup>
